assets: styles, SVG's [first bg]

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="assets/styles/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Ports available</h1>
-    <ul id="ports">
+    <div class="main_container">
 
-    </ul>
+    </div>
 </body>
 
 </html>
-
-<script src="ports.js"></script>
