--- a/starting_page.html
+++ b/starting_page.html
@@ -10,8 +10,13 @@
 
 <body>
     <div class="main_container">
+        <div id="port_list" class="port_list">
 
+        </div>
     </div>
 </body>
 
 </html>
+
+
+<script src="ports.js"></script>
