list creating + styling

--- a/starting_page.html
+++ b/starting_page.html
@@ -14,9 +14,10 @@
             <section class="top_logo">
                 <img src="assets/SVG/top_logo.svg" alt="">
             </section>
+
             <section id="port_list" class="port_list">
                 <div class="refresh_container">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60 77.01">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60 60">
                         <defs>
                             <style>
                                 .cls-1 {
@@ -67,7 +68,11 @@
                 <div class="list_info">
                     <span id="list_info_text"><i>hit refresh to update the port list</i></span>
                 </div>
+                <div class="list">
+
+                </div>
             </section>
+
             <section class="bottom_info">
                 <img src="assets/SVG/bottom_info.svg" alt="">
             </section>
